<resources>
    <string name="app_name">Smart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facility_staff_header">Facility Task Status Update</string>
    <string name="facility_staff_subheader">Update and track the current status of facilities. Ensure accurate reporting by selecting the appropriate status to reflect ongoing maintenance progress.</string>
    <string name="facility_staff_button">Save Status</string>
    <string name="contact_header">Contact Information</string>
    <string name="contact_header_content">Reach out to us directly via email, message, or call for any inquiries or assistance you may need.</string>
    <string name="contact_email_label">Email</string>
    <string name="contact_email">ralphhonra@gmail.com</string>
    <string name="contact_message_label">Message</string>
    <string name="contact_message">+63 970 190 0391</string>
    <string name="contact_call_label">Call</string>
    <string name="contact_call">+63 970 190 0391</string>
    <string name="profile_name_label">Full Name :</string>
    <string name="profile_name">Ralph Daniel Honra</string>
    <string name="profile_email_label">Email Address :</string>
    <string name="profile_email">sampleemail@gmail.com</string>
    <string name="profile_amount_label">Total Issues Sent :</string>
    <string name="profile_amount">10</string>
    <string name="profile_show_contact">Show Contact</string>
    <string name="profile_terms_and_policy">Terms and policy</string>
    <string name="profile_all_rights_reserved">© 2025 All Rights Reserved.</string>
    <string name="list_header">Facility Issues Overview</string>
    <string name="list_subheader">Browse reported facility issues with current statuses and summarized information for quick review.</string>
    <string name="list_pending">Pending</string>
    <string name="list_ongoing">Ongoing</string>
    <string name="list_completed">Completed</string>
    <string name="access_notice">Notice</string>
    <string name="access_title">Access Denied</string>
    <string name="access_body">Only authorized users can create accounts with this role. Kindly enter the valid authorization code to continue.</string>
    <string name="access_button">Verify</string>
    <string name="access_label_1">Enter your 6-digit code&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;</string>
    <string name="dialog_warning">Warning!</string>
    <string name="dialog_body">Are you sure you want to save this information? This action cannot be undone</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="issue_banner">Insure all information is accurate before proceeding</string>
    <string name="issue_process_info">Processed Information</string>
    <string name="issue_process_info_body">Thoroughly review all details. Upon confirmation, submit the task for assessment and action by the maintenance staff.</string>
    <string name="issue_target_lab">Target Laboratory</string>
    <string name="issue_target_lab_body">Please select the specific laboratory to which you would like to submit your concern.</string>
    <string name="issue_target_lab_label">Choose your laboratory here . . .</string>
    <string name="issue_title">Issue title</string>
    <string name="issue_title_body">Please provide a clear and concise title that accurately describes the issue to facilitate efficient processing and resolution.</string>
    <string name="issue_title_label">Write your title here . . .</string>
    <string name="issue_your_name">Your name</string>
    <string name="issue_your_name_body">Please verify your full name as it appears in your registration records to ensure accurate task tracking.</string>
    <string name="issue_your_name_label">Ralph Daniel Honra</string>
    <string name="guide_title">Please ensure the following:</string>
    <string name="guide_1">1</string>
    <string name="guide_1_content">Take a clear photo of the task or facility issue that requires attention. Ensure the image accurately represents the problem.</string>
    <string name="guide_2">2</string>
    <string name="guide_2_content">Verify the system-generated information. Make sure everything is correct before proceeding.</string>
    <string name="guide_3">3</string>
    <string name="guide_3_content">Double-check all provided details. Once confirmed, submit the task for review and processing by the maintenance staff.</string>
    <string name="guide_button">Proceed</string>
    <string name="bottom_sheet_send_note_title">Describe the Issue</string>
    <string name="bottom_sheet_send_note_body">Please provide a detailed description of the problem to help the maintenance staff address it efficiently.</string>
    <string name="bottom_sheet_send_note_label">Write your message here . . .</string>
    <string name="bottom_sheet_send_note_button">Submit</string>
    <string name="bottom_sheet_title">Submitted Issue Summary</string>
    <string name="bottom_sheet_issue_name">Defective Chair</string>
    <string name="bottom_sheet_issue_placeholder">Issue title</string>
    <string name="bottom_sheet_submitter">Ralph Daniel Honra</string>
    <string name="bottom_sheet_sender">Sender</string>
    <string name="bottom_sheet_date">March 04, 2025</string>
    <string name="bottom_sheet_submitted_on">Submitted on</string>
    <string name="bottom_sheet_description">Description</string>
    <string name="bottom_sheet_description_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="bottom_sheet_submit_message">Submit a message?</string>
    <string name="bottom_sheet_submit_message_body">Click the button bellow if you wish to provide a detailed description of the problem to help the maintenance staff address it efficiently.</string>
    <string name="bottom_sheet_button">Add Issue Note</string>
    <string name="bottom_sheet_pending">Pending</string>
    <string name="bottom_sheet_student">Student</string>
    <string name="item_room_number">Room number: 1732</string>
    <string name="item_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="item_reports">Reports</string>
    <string name="item_community">Community</string>
    <string name="item_title">Defective Chair</string>
    <string name="item_sub_title">Issue title</string>
    <string name="item_date">March 04, 2025</string>
    <string name="item_date_submitted">Date submitted</string>
    <string name="item_pending">Pending</string>
    <string name="item_ongoing">Ongoing</string>
    <string name="item_completed">Completed</string>
    <string name="item_dismissed">Dismissed</string>
    <string name="item_community_name">Ralph Daniel Honra</string>
    <string name="item_community_date_time">03 MARCH AT 03:45</string>
    <string name="item_community_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="item_community_student">Student</string>
    <string name="item_community_r">R</string>
    <string name="homepage_greeting">Hello, User</string>
    <string name="homepage_email">email@gmail.com</string>
    <string name="homepage_role">Student</string>
    <string name="homepage_warning">16 facility issues detected. Please review them in the Issues tab.</string>
    <string name="homepage_list_header">Current Facilities</string>
    <string name="homepage_list_subheader">Click a facility to view its information, reports, and more.</string>
    <string name="carousel_first_page_header">Enhanced Collaboration</string>
    <string name="carousel_first_page_subheader">Foster better communication between students, staff, and maintenance teams for effective problem-solving.</string>
    <string name="carousel_second_page_header">Real-Time Updates</string>
    <string name="carousel_second_page_subheader">Stay informed with instant updates on the status of maintenance requests and reported concerns.</string>
    <string name="carousel_third_page_header">Efficient Reporting</string>
    <string name="carousel_third_page_subheader">Simplify how facility issues are reported, ensuring faster acknowledgment and quicker resolutions.</string>
    <string name="carousel_fourth_page_header">Optimized Monitoring</string>
    <string name="carousel_fourth_page_subheader">Use technology to monitor facility conditions more effectively, reducing overlooked issues.</string>
    <string name="carousel_fifth_page_header">Secure Access</string>
    <string name="carousel_fifth_page_subheader">Ensure that only authorized users can report and view facility concerns, protecting data and privacy.</string>
    <string name="carousel_sixth_page_header">Data-Driven Insights</string>
    <string name="carousel_sixth_page_subheader">Utilize reports and analytics to identify recurring issues and prioritize maintenance tasks efficiently.</string>
    <string name="home_account_header">Let\'s start!</string>
    <string name="home_account_subheader">Welcome! What would you like to do?</string>
    <string name="home_account_sign_in_button">Sign in now</string>
    <string name="home_account_no_account">New to the app? Register now</string>
    <string name="login_header">Welcome Back!</string>
    <string name="login_subheader">Sign to your account</string>
    <string name="login_email">Email</string>
    <string name="login_email_label">Your email</string>
    <string name="login_password">Password</string>
    <string name="login_password_label">Your password</string>
    <string name="login_user_option">Want to change role? Click here</string>
    <string name="login_login">Login</string>
    <string name="login_or">Or</string>
    <string name="login_google"> Sign in with Google</string>
    <string name="login_no_account_1">Don\'t have an account? Register now!</string>
    <string name="login_no_account_2"> Register now!</string>
    <string name="login_get_started">Get Started</string>
    <string name="login_student">Student</string>
    <string name="login_student_officer">Officer</string>
    <string name="login_student_info">View facility issues for awareness.</string>
    <string name="login_officer_info">Report facility issues for awareness.</string>
    <string name="login_teacher">Teacher</string>
    <string name="login_teacher_info">Ensure classroom facilities remain functional and safe.</string>
    <string name="login_staff">Maintenance Staff</string>
    <string name="login_staff_info">Track and resolve reported facility issues quickly.</string>
    <string name="register_header">Hello There!</string>
    <string name="register_subheader">Sign up new account</string>
    <string name="register_first_name">First name</string>
    <string name="register_first_name_label">Your first name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_last_name_label">Last name label</string>
    <string name="register_role">Role</string>
    <string name="register_student">STUDENT</string>
    <string name="register_teacher">TEACHER</string>
    <string name="register_staff">STAFF</string>
    <string name="register_terms_condition">
        By tapping Next, you are agreeing to SMART\'s Terms and Conditions and are acknowledging our Privacy Notice applies.
    </string>
    <string name="register_next">Next</string>
    <string name="register_pass_header">Almost there!</string>
    <string name="register_pass_subheader">Sign up new account</string>
    <string name="register_pass_email">Email</string>
</resources>