<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_25sdp"
    tools:context=".ui.account.login.RegisterFragment">

    <ImageView
        android:id="@+id/ivBackButtonRegister"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:src="@drawable/left_arrow_long"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register_header"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackButtonRegister" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_subheader"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register_first_name"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/account_input_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/register_first_name_label"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register_last_name"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/account_input_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/register_last_name_label"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register_role"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/account_input_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/register_student"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView80" />

    <TextView
        android:id="@+id/tvUserOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_terms_condition"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress20" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserOption">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register_next"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>