<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:paddingBottom="@dimen/_50sdp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView19"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedCornerImage"
        app:srcCompat="@drawable/list_pic6" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/bottom_sheet_button"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView444"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_25sdp"
        app:cardBackgroundColor="@color/pending_bg"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView39">

        <TextView
            android:id="@+id/textView4544"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bottom_sheet_pending"
            android:textColor="@color/pending_main"
            android:textSize="@dimen/_8ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4444"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/student_bg"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView444"
        app:layout_constraintTop_toTopOf="@+id/textView48">

        <TextView
            android:id="@+id/textView45444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bottom_sheet_student"
            android:textColor="@color/student_main"
            android:textSize="@dimen/_8ssp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bottom_sheet_title"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bottom_sheet_issue_name"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:textStyle="italic"
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/bottom_sheet_issue_placeholder"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bottom_sheet_issue_name"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:textStyle="italic"
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/bottom_sheet_sender"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bottom_sheet_date"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView49"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:textStyle="italic"
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_submitted_on"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <ImageView
        android:layout_marginEnd="@dimen/_8sdp"
        android:id="@+id/imageView20"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4444"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:srcCompat="@drawable/chat" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bottom_sheet_description"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintStart_toEndOf="@+id/textView52"
        app:layout_constraintTop_toTopOf="@+id/textView52"
        app:srcCompat="@drawable/arrow_right" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/bottom_sheet_description_body"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageView20"
        app:layout_constraintStart_toStartOf="@+id/textView52"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bottom_sheet_submit_message"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/bottom_sheet_submit_message_body"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView55"
        app:layout_constraintStart_toStartOf="@+id/textView56"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />
</androidx.constraintlayout.widget.ConstraintLayout>